update fetch data

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "quocHao2k6",
-    "slug": "quocHao2k6",
+    "name": "anhDuc2k6",
+    "slug": "anhDuc2k6",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
