--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quochao2k6",
+  "name": "baoTran2k7",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "cross-env": "^7.0.3",
     "expo": "~49.0.13",
     "expo-app-loading": "^2.1.1",
     "expo-blur": "~12.4.1",
