--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@expo-google-fonts/noto-sans": "^0.2.3",
     "@expo-google-fonts/oswald": "^0.2.3",
     "@expo-google-fonts/signika": "^0.2.3",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
@@ -28,7 +28,7 @@
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.0",
     "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.10",
     "react-native-expo-viewport-units": "^0.0.8",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
